# PictureProcessingGraduationDesign

./: .gitignore  README.md  bintray.gradle  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml  activity_main_picture_item.xml  activity_picture_processing.xml  activity_picture_processing_picture_filter_item.xml  activity_picture_processing_picture_frame_item.xml  activity_picture_processing_picture_frame_menu.xml  activity_picture_processing_picture_param_menu.xml  activity_picture_processing_picture_seekbar_recycleview_menu.xml  activity_picture_processing_picture_text_item.xml  activity_picture_processing_picture_text_param_dialog.xml  activity_picture_processing_picture_transform_menu.xml  content_main.xml  content_picture_directory.xml  directory_spinner_bar.xml  main_activity_picture_item.xml
gradle/wrapper/: gradle-wrapper.properties
loggradleplugin/: build.gradle
openCVLibrary340/: build.gradle
opencvlibrary/: CMakeLists.txt  build.gradle
opencvlibrary/src/androidTest/java/com/example/opencvlibrary/: ExampleInstrumentedTest.java
opencvlibrary/src/main/: AndroidManifest.xml
opencvlibrary/src/main/cpp/: native-lib.cpp  test.cpp
opencvlibrary/src/main/java/com/example/opencvlibrary/: MyClass.java  OpenCVApi.java  OpencvApi.java  OpencvApi.kt
opencvlibrary/src/main/res/values/: strings.xml
opencvlibrary/src/test/java/com/example/opencvlibrary/: ExampleUnitTest.java
(+107 files in other folders)
